@@ -1,3 +1,10 @@
+Tue Oct 23 13:57:03 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: on errors don't print the whole filename for
+	  opened files, just the displayed name
+
+	* src/gnome-genius.c: add Ctrl->R for "Run"
+
 Tue Oct 23 13:33:42 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* lib/linear_algebra/linear_algebra.gel: slightly optimize
